@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940523
+MANIFEST for ded, version t19940524
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
